main section with pixel-perfect

--- a/src/scss/components/_global-style.scss
+++ b/src/scss/components/_global-style.scss
@@ -119,17 +119,14 @@ section {
   margin: 0 auto;
 }
 
-.container {
-  padding-left: 262px;
-}
-
 h1 {
   font-family: 'YS-text-black', sans-serif;
   font-weight: 900;
 }
 
 button {
-  font-weight: 700;
+  font-weight: 500;
+  border: none;
 }
 
 h2 {
