--- a/src/scss/components/_var.scss
+++ b/src/scss/components/_var.scss
@@ -18,12 +18,12 @@ $media-mobile: 767px;
 :root {
   --c-body-general: #FFFFFF;
   --c-font-general: #21201F;
+  --c-btn-bg: #FFDE40;
   // --c: #C5C5C5;
   // --c: #DEDEDE;
   // --c: rgba(255, 255, 255, 0.5);
   // --c: #808080;
   // --c: #8241EF;
-  // --c: #FFDE40;
   // --c: #2E2C21;
   // --c: rgba(255, 255, 255, 0.63);
 
