--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,7 @@
-@import url('./components/_var.scss');
-@import url('./components/_normalize.scss');
-@import url('./components/_global-style.scss');
-@import url('./components/_section-main.scss');
-@import url('./components/_section-benefits.scss');
-@import url('./components/_section-events.scss');
-@import url('./components/_section-order.scss');
+@import './components/var';
+@import './components/normalize';
+@import './components/global-style';
+@import './components/section-main';
+@import './components/section-benefits';
+@import './components/section-events';
+@import './components/section-order';
