--- a/src/scss/components/_var.scss
+++ b/src/scss/components/_var.scss
@@ -27,7 +27,7 @@ $media-mobile: 767px;
   // --c: #2E2C21;
   // --c: rgba(255, 255, 255, 0.63);
 
-  --max-width-section: 906px;
+  --max-width-section: 1250px; //916px + 183
   --padding-section: 64px;
 
   // @include breakpoint-desktop {}
